--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,7 +57,7 @@ ol, ul {
 	}
 
 	body {
-		background-color: #5ba098;
+		background-color: #2C5985;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
