--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -316,8 +316,14 @@ ol, ul {
 			.image.main {
 				margin: 2rem 0;
 			}
-
+	.center {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			margin-bottom: 20px;
+			width: 50%;
 		}
+	}
 
 /* Actions */
 
